hphp/hack/test/typecheck/shape/shape_field_check/shape_idx_unset_key_open_shape.php
<?hh

function test(shape('x' => int, ...) $s): void {
  Shapes::removeKey(inout $s, 'x');
  Shapes::idx($s, 'x');
}
